
Changes and New Features in 4.3 (2021-06-09):
	* Experimental: grouped categorical variables for DART

	* Removing randomForest package as a Depends in DESCRIPTION
	but the code remains: you just need to add it to DESCRIPTION
	and uncomment it in NAMESPACE to get that functionality
	
	* Renaming HDimpute function to CDimpute to better
	reflect its flavor of cold-decking vs. hot-decking

Changes and New Features in 4.2 (2020-12-22):
	* Synchronizing docs with BART package:
	from here on, the docs may diverge as needed

	* fix bugs in mc.pwbart

Changes and New Features in 4.1 (2020-10-05):
	* Experimental function for sequential sharding: ss.gbart

Changes and New Features in 4.0 (2020-08-28):
	* New function for hot-deck missing imputation of
	x.train and x.test: HDimpute
	it samples missing values that are row-dependent
	rather than independent
	compatible with, and cognizant of, multinomial imputation

Changes and New Features in 3.9 (2020-07-30):
	* Hot decked version of FPD, S3 method HDPFD, completed 
	with its corresponding variance adjustment

Changes and New Features in 3.8 (2020-07-13):
	* New support for covariate missing imputation of a category
	  see the new arguments to gbart: impute.mult, impute.prob
	  and impute.miss

Changes and New Features in 3.7 (2020-06-10):
	* Experimental support for Modified LISA: ml.gbart() function
	* Experimental support for Heteroskedastic BART: hbart()
	* Experimental support for LIO BART: liobart()
	* Synching new S3 method arguments
	* Use weighted combination subsets for SHAP/SHAP2/HDSHAP S3 methods
          (originally HDSHAP was simply named HD)
	* Hot decked version of FPD: S3 method HDPFD

Changes and New Features in 3.6 (2020-05-09):
	* Adding new S3 method, SHAP, that calculates the
	Shapley additive explanation (SHAP) partial dependence function
	and SHAP2 for two-way interactions
	an alternative to Friedman's partial dependence function
	Shapley are computed from the x.test/predict fit directly 