@@ -3,9 +3,9 @@ useDynLib('BART3', .registration=TRUE)
 export(wbart, mc.wbart, pwbart, mc.wbart.gse, mc.pwbart)
 export(pbart, mc.pbart)
 export(gbart, mc.gbart)
-export(ml.gbart, ss.gbart)
-export(zbart, mc.zbart, ss.zbart)
-export(hbart)
+export(ml.gbart)
+##export(zbart, mc.zbart, ss.zbart, ss.gbart)
+##export(hbart)
 export(abart, mc.abart)
 ##export(spbart, mc.spbart)
 export(stratrs, rs.pbart)
